--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "vitest"
   },
   "devDependencies": {
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "supertest": "^7.1.0",
+    "vitest": "^3.1.3",
+    "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "bcrypt": "^5.1.1",
+    "date-fns": "^4.1.0",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^5.1.0",
+    "express-session": "^1.18.1",
+    "nodemailer": "^7.0.2",
+    "playwright": "^1.52.0"
   }
 }
