--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -26,18 +26,18 @@ jobs:
       - name: Enviar para VM Produção
         uses: appleboy/scp-action@master
         with:
-          host: ${{ secrets.PROD_HOST }}
-          username: ${{ secrets.PROD_USER }}
-          password: ${{ secrets.PROD_SSH_KEY }}
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USER }}
+          password: ${{ secrets.VM_PASS }}
           source: .
-          target: /home/${{ secrets.PROD_USER }}/prototype-app
+          target: /home/${{ secrets.VM_USER }}/prototype-app
 
       - name: Rodar docker-compose na VM
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.PROD_HOST }}
-          username: ${{ secrets.PROD_USER }}
-          password: ${{ secrets.PROD_SSH_KEY }}
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USER }}
+          password: ${{ secrets.VM_PASS }}
           script: |
             cd prototype-app
             docker compose -f docker-compose.prod.yml up -d --build
