--- a/.github/workflows/homolog.yml
+++ b/.github/workflows/homolog.yml
@@ -25,11 +25,12 @@ jobs:
         continue-on-error: true
 
       - name: Enviar para VM Homolog
-        uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@v1
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           password: ${{ secrets.VM_PASS }}
+          port: 22
           source: .
           target: /home/${{ secrets.VM_USER }}/prototype-app
 
