--- a/.github/workflows/homolog.yml
+++ b/.github/workflows/homolog.yml
@@ -25,22 +25,28 @@ jobs:
         continue-on-error: true
 
       - name: Enviar para VM Homolog
-        uses: appleboy/scp-action@v1
-        with:
-          host: ${{ secrets.VM_HOST }}
-          username: ${{ secrets.VM_USER }}
-          key: ${{ secrets.VM_PASS }}
-          port: 22
-          source: .
-          target: /home/${{ secrets.VM_USER }}/prototype-app
-
-      - name: Rodar docker-compose na VM
         uses: appleboy/ssh-action@v1
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_PASS }}
-          port: 22
-          script: |
-            cd prototype-app
-            docker compose -f docker-compose.hml.yml up -d --build
+          script: whoami
+
+#      - name: Enviar para VM Homolog
+#        uses: appleboy/scp-action@master
+#        with:
+#          host: ${{ secrets.VM_HOST }}
+#          username: ${{ secrets.VM_USER }}
+#          password: ${{ secrets.VM_PASS }}
+#          source: .
+#          target: /home/${{ secrets.VM_USER }}/prototype-app
+
+#      - name: Rodar docker-compose na VM
+#        uses: appleboy/ssh-action@master
+#        with:
+#          host: ${{ secrets.VM_HOST }}
+#          username: ${{ secrets.VM_USER }}
+#          password: ${{ secrets.VM_PASS }}
+#          script: |
+#            cd prototype-app
+#            docker compose -f docker-compose.hml.yml up -d --build
