--- a/.github/workflows/homolog.yml
+++ b/.github/workflows/homolog.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
-          key: ${{ secrets.VM_PASS }}
+          password: ${{ secrets.VM_PASS }}
           script: whoami
 
 #      - name: Enviar para VM Homolog
