--- a/.github/workflows/homolog.yml
+++ b/.github/workflows/homolog.yml
@@ -30,7 +30,7 @@ jobs:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           password: ${{ secrets.VM_PASS }}
-          protocol: tcp4
+          use_insecure_cipher: true
           port: 22
           script: whoami
 
