--- a/.github/workflows/homolog.yml
+++ b/.github/workflows/homolog.yml
@@ -25,31 +25,20 @@ jobs:
         continue-on-error: true
 
       - name: Enviar para VM Homolog
-        uses: appleboy/ssh-action@v1
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_KEY }}
-          fingerprint: ${{ secrets.VM_FING }}
-          use_insecure_cipher: true
-          port: 22
-          script: whoami
+          source: .
+          target: /home/${{ secrets.VM_USER }}/prototype-app
 
-#      - name: Enviar para VM Homolog
-#        uses: appleboy/scp-action@master
-#        with:
-#          host: ${{ secrets.VM_HOST }}
-#          username: ${{ secrets.VM_USER }}
-#          password: ${{ secrets.VM_PASS }}
-#          source: .
-#          target: /home/${{ secrets.VM_USER }}/prototype-app
-
-#      - name: Rodar docker-compose na VM
-#        uses: appleboy/ssh-action@master
-#        with:
-#          host: ${{ secrets.VM_HOST }}
-#          username: ${{ secrets.VM_USER }}
-#          password: ${{ secrets.VM_PASS }}
-#          script: |
-#            cd prototype-app
-#            docker compose -f docker-compose.hml.yml up -d --build
+      - name: Rodar docker-compose na VM
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.VM_HOST }}
+          username: ${{ secrets.VM_USER }}
+          password: ${{ secrets.VM_PASS }}
+          script: |
+            cd prototype-app
+            docker compose -f docker-compose.hml.yml up -d --build
