--- a/.github/workflows/homolog.yml
+++ b/.github/workflows/homolog.yml
@@ -21,26 +21,22 @@ jobs:
         run: npm install
 
       - name: Rodar testes
-        run: npm run test
-        continue-on-error: true
+        run: npm run test || true
 
-      - name: Enviar para VM Homolog
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.VM_HOST }}
-          username: ${{ secrets.VM_USER }}
-          key: ${{ secrets.VM_KEY }}
-          passphrase: ${{ secrets.VM_PP }}
-          source: .
-          target: /home/${{ secrets.VM_USER }}/prototype-app
+      - name: Enviar para VM homolog
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.VM_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
+
+          rsync -avz --delete \
+            -e "ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no" \
+            ./ \
+            ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }}:/home/${{ secrets.VM_USER }}/prototype-app
 
       - name: Rodar docker-compose na VM
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.VM_HOST }}
-          username: ${{ secrets.VM_USER }}
-          key: ${{ secrets.VM_KEY }}
-          passphrase: ${{ secrets.VM_PP }}
-          script: |
-            cd prototype-app
-            docker compose -f docker-compose.hml.yml up -d --build
+        run: |
+          ssh -i ~/.ssh/id_rsa -o StrictHostKeyChecking=no \
+            ${{ secrets.VM_USER }}@${{ secrets.VM_HOST }} \
+            "cd /home/${{ secrets.VM_USER }}/prototype-app && docker compose -f docker-compose.hml.yml up -d --build"
