--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,8 +23,11 @@ services:
       - db
     ports:
       - "8080:3000"
-    env_file:
-      - .env.prod
+    environment:
+      DATABASE_URL: ${DATABASE_URL_PROD}
+      SESSION_SECRET: ${SESSION_SECRET}
+      EMAIL_USER: ${EMAIL_USER}
+      EMAIL_PASS: ${EMAIL_PASS}
     command: sh -c "npx prisma migrate deploy && psql postgresql://prototype_prod:prototype@db:5432/prototype_prod -f ./db/seed.sql && node index.js"
 
 volumes:
