--- a/docker-compose.hml.yml
+++ b/docker-compose.hml.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - "8081:3000"
     environment:
-      DATABASE_URL: ${DATABASE_URL_HML}
+      DATABASE_URL: ${DATABASE_URL}
       SESSION_SECRET: ${SESSION_SECRET}
       EMAIL_USER: ${EMAIL_USER}
       EMAIL_PASS: ${EMAIL_PASS}
