--- a/docker-compose.hml.yml
+++ b/docker-compose.hml.yml
@@ -23,11 +23,8 @@ services:
       - db
     ports:
       - "8081:3000"
-    environment:
-      DATABASE_URL: ${DATABASE_URL}
-      SESSION_SECRET: ${SESSION_SECRET}
-      EMAIL_USER: ${EMAIL_USER}
-      EMAIL_PASS: ${EMAIL_PASS}
+    env_file:
+      - .env.hml
     command: sh -c "
       sleep 10 && \
       npx prisma migrate deploy && \
