--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -23,11 +23,8 @@ services:
       - db
     ports:
       - "8080:3000"
-    environment:
-      DATABASE_URL: ${DATABASE_URL}
-      SESSION_SECRET: ${SESSION_SECRET}
-      EMAIL_USER: ${EMAIL_USER}
-      EMAIL_PASS: ${EMAIL_PASS}
+    env_file:
+      - .env.prod
     command: sh -c "
       npx prisma migrate deploy && \
       psql ${DATABASE_URL} -f ./db/seed.sql && \
