--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "start:hml": "dotenv -e .env.hml node index.js",
+    "start:prod": "dotenv -e .env.prod node index.js",
     "test": "vitest"
   },
   "devDependencies": {
@@ -19,6 +22,7 @@
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "date-fns": "^4.1.0",
+    "dotenv-cli": "^8.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
