--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -26,9 +26,7 @@ services:
     env_file:
       - .env.prod
     command: sh -c "
-      sleep 10 && \
-      npx prisma generate && \
-      npx prisma migrate deploy && \
+      dotenv -e .env.prod -- npx prisma migrate deploy && \
       psql postgresql://prototype_prod:prototype@db:5432/prototype_prod -f ./db/seed.sql && \
       npm run start:prod"
 
