--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "start:hml": "dotenv -e .env.hml sh -c 'npx prisma migrate deploy && node index.js'",
-    "start:prod": "dotenv -e .env.prod sh -c 'npx prisma migrate deploy && node index.js'",
+    "start:hml": "dotenv -e .env.hml -- npx prisma migrate deploy && node index.js",
+    "start:prod": "dotenv -e .env.prod -- npx prisma migrate deploy && node index.js",
     "test": "vitest"
   },
   "devDependencies": {
