--- a/docker-compose.hml.yml
+++ b/docker-compose.hml.yml
@@ -26,9 +26,14 @@ services:
     env_file:
       - .env.hml
     command: sh -c "
-      dotenv -e .env.hml -- npx prisma migrate deploy && \
-      npm run start:hml && \
-      psql postgresql://prototype_hml:prototype@db:5432/prototype_hml -f ./db/seed.sql"
+      npx prisma migrate deploy && \
+      psql postgresql://prototype_hml:prototype@db:5432/prototype_hml -f ./db/seed.sql && \
+      npm run start:hml"
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+      SESSION_SECRET: ${SESSION_SECRET}
+      EMAIL_USER: ${EMAIL_USER}
+      EMAIL_PASS: ${EMAIL_PASS}
 
 volumes:
   pgdata_hml:
