--- a/docker-compose.hml.yml
+++ b/docker-compose.hml.yml
@@ -30,10 +30,7 @@ services:
       psql postgresql://prototype_hml:prototype@db:5432/prototype_hml -f ./db/seed.sql && \
       npm run start:hml"
     environment:
-      DATABASE_URL: ${DATABASE_URL}
-      SESSION_SECRET: ${SESSION_SECRET}
-      EMAIL_USER: ${EMAIL_USER}
-      EMAIL_PASS: ${EMAIL_PASS}
+      - DATABASE_URL=postgresql://prototype_hml:prototype@db:5432/prototype_hml
 
 volumes:
   pgdata_hml:
