--- a/docker-compose.hml.yml
+++ b/docker-compose.hml.yml
@@ -24,7 +24,7 @@ services:
     ports:
       - "8081:3000"
     env_file:
-      - .env.hml
+      - .env
     command: sh -c "
       npx prisma migrate deploy && \
       psql postgresql://prototype_hml:prototype@db:5432/prototype_hml -f ./db/seed.sql && \
