--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
         run: |
           if [ "${{ github.ref }}" == "refs/heads/main" ]; then
             cp /home/univates/prototype-app/.env.prod .env
-            sudo docker-compose -f docker-compose.prod.yml down
-            sudo docker-compose -f docker-compose.prod.yml up -d --build
+            sudo docker-compose -f docker-compose.prod.yml -p production down
+            sudo docker-compose -f docker-compose.prod.yml -p production up -d --build
           else
             cp /home/univates/prototype-app/.env.hml .env
-            sudo docker-compose -f docker-compose.hml.yml down
-            sudo docker-compose -f docker-compose.hml.yml up -d --build
+            sudo docker-compose -f docker-compose.hml.yml -p homolog down
+            sudo docker-compose -f docker-compose.hml.yml -p homolog up -d --build
           fi
