--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
   },
   "devDependencies": {
     "prisma": "^6.5.0",
-    "supertest": "^7.1.0",
-    "vitest": "^3.1.3",
-    "vitest-mock-extended": "^3.1.0"
+    "supertest": "^7.1.2",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
